# ptt-agent

./: .gitignore  CLAUDE.md  README.md  templates.json
addin/: manifest.xml  package-lock.json
addin/src/taskpane/: deck.ts  index.tsx
addin/src/taskpane/components/: App.tsx  Chat.tsx
backend/: .env.example  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
backend/app/: agent.py  chat.py  config.py  excel.py  main.py  relay.py  session.py  templates.py  tools.py  workbooks.py
backend/scripts/: build-templates.ts  build_templates.py  make_test_xlsx.py  probe_request.py  relay_test.py
backend/src/: excel.ts  index.ts  template-defs.ts  templates.ts
backend/src/routes/: chat.ts  workbooks.ts
backend/templates/: quarterly-review.pptx
