[project]
name = "deck-agent-backend"
version = "0.1.0"
description = "Python port of the PowerPoint Financial-Deck Agent backend: OpenRouter chat + tool-use loop via PydanticAI, deterministic Excel parsing, numeric verification."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-ai>=0.0.49",
    "openpyxl>=3.1",
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
